--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "frontend/vite",
     "server": "nodemon backend/server.js"
   },
   "keywords": [],
@@ -20,9 +21,11 @@
     "express": "^5.1.0",
     "inspector": "^0.5.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.539.0",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
     "path": "^0.12.7",
+    "react-icons": "^5.5.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
