--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "daisyui": "^5.0.50",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.11"
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^7.8.0",
+    "tailwindcss": "^4.1.11",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
