--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chalk": "^5.5.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "inspector": "^0.5.0",
@@ -25,6 +26,7 @@
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
     "path": "^0.12.7",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "socket.io": "^4.8.1"
   },
