--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "frontend/vite",
+    "dev": "cd frontend && npm run dev  ",
     "server": "nodemon backend/server.js"
   },
   "keywords": [],
